update 0.3.0